--- a/javascript/building-blocks/tasks/conditionals/conditionals4-download.html
+++ b/javascript/building-blocks/tasks/conditionals/conditionals4-download.html
@@ -32,7 +32,13 @@
     let machineResult;
     let pwdResult;
 
-    // Add your code here
+    if (machineActive == true){
+      machineResult = 'The machine is ON';
+      pwdResult = pwd === 'cheese' ? pwdResult = 'Login successful' : pwdResult = 'Wrong password';
+
+    } else{
+      machineResult = 'The machine is OFF'
+    }
 
     // Don't edit the code below here!
 
